# Floresta

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.nix  build_floresta.nix  build_utreexod.nix  config.toml.sample  docker-compose.yml  flake.nix  justfile  pyproject.toml  readme.md  rust-toolchain.toml  typos.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: benchmarks.yml  conventional-commits.yml  docker.yml  functional.yml  fuzz.yml  nix.yml  rust.yml
Floresta mdbook/src/: README.md  license.md
chain_data/: db
cli/: README.md
contrib/: clean_data.sh  feature_matrix.sh  install.sh  test_features.sh
crates/floresta/: Cargo.toml
crates/floresta-chain/: Cargo.toml
crates/floresta-chain/benches/: chain_state_bench.rs
crates/floresta-chain/src/: extensions.rs  lib.rs
crates/floresta-chain/src/pruned_utreexo/: chain_state.rs  chain_state_builder.rs  chainparams.rs  chainstore.rs  consensus.rs  error.rs  flat_chain_store.rs  kv_chainstore.rs  mod.rs  partial_chain.rs  udata.rs
crates/floresta-chain/src/pruned_utreexo/testdata/: blocks.txt  signet_headers  test_reorg.json
crates/floresta-chain/testdata/: headers.zst  signet_headers.zst
crates/floresta-chain/testdata/bitcoin-core/: README.md
crates/floresta-chain/testdata/block_367891/: raw.zst  spent_txos.zst  spent_utxos.zst
crates/floresta-chain/testdata/block_866342/: raw.zst  spent_txos.zst  spent_utxos.zst
crates/floresta-chain/tests/: transaction_tests.rs  util.rs
crates/floresta-cli/: Cargo.toml  README.md
crates/floresta-cli/src/: error.rs  jsonrpc_client.rs  lib.rs  main.rs  parsers.rs  reqwest_client.rs  rpc.rs  rpc_types.rs
crates/floresta-common/: Cargo.toml
crates/floresta-common/src/: desc_types.rs  descriptor_internals.rs  error.rs  lib.rs  macros.rs  slip132.rs  spsc.rs
crates/floresta-compact-filters/: Cargo.toml
crates/floresta-compact-filters/src/: bip158.rs  flat_filters_store.rs  kv_filter_database.rs  lib.rs  network_filters.rs
crates/floresta-electrum/: Cargo.toml
crates/floresta-electrum/src/: electrum_protocol.rs  error.rs  lib.rs
crates/floresta-errors/: Cargo.toml
crates/floresta-errors/src/: lib.rs
crates/floresta-errors/src/florestad/: commom.rs  mod.rs  slip123.rs
crates/floresta-errors/src/watch_only/: commom.rs  mod.rs
crates/floresta-node/: Cargo.toml
crates/floresta-node/src/: error.rs  florestad.rs  lib.rs  slip132.rs  wallet_input.rs  zmq.rs
crates/floresta-node/src/json_rpc/: blockchain.rs  control.rs  mod.rs  network.rs  request.rs  res.rs  server.rs
crates/floresta-rpc/: Cargo.toml
crates/floresta-rpc/src/: lib.rs  rpc.rs  rpc_types.rs
crates/floresta-watch-only/: Cargo.toml
crates/floresta-watch-only/src/: block_filter.rs  descriptors.rs  kv_database.rs  lib.rs  memory_database.rs  merkle.rs
crates/floresta-wire/: Cargo.toml  README.md
crates/floresta-wire/src/: lib.rs
crates/floresta-wire/src/cli_wire/: mod.rs  test.rs
crates/floresta-wire/src/p2p_wire/: address_man.rs  block_proof.rs  chain_selector.rs  error.rs  mempool.rs  mod.rs  node.rs  node_context.rs  node_interface.rs  peer.rs  running_node.rs  socks.rs  stream_reader.rs  sync_node.rs  test_chain_selector.rs  transport.rs
crates/floresta-wire/src/p2p_wire/seeds/: mainnet_seeds.json  regtest_seeds.json  signet_seeds.json
crates/floresta-wire/src/p2p_wire/tests/: chain_selector.rs  mod.rs  running_node.rs  sync_node.rs  utils.rs
crates/floresta-wire/src/p2p_wire/tests/test_data/: README.md  block_hashes.txt  blocks.json  false_roots.json  hashes.json  regtest_block_hashes.txt  regtest_blocks.json  regtest_headers.json  roots.json
crates/floresta/examples/: chainstate-builder.rs  indexer.rs  node.rs  watch-only.rs
crates/floresta/src/: lib.rs
doc/: README.md  benchmarking.md  build-macos.md  build-unix.md  build_mac_os.md  build_unix.md  docker.md  fuzzing.md  install.md  installing.md  justfile.md  metrics.md  nix.md  proxy.md  run.md  running-tests.md  running_tests.md
docs/: tutorial(PT-BR).md
floresta/: Cargo.toml
floresta-chain/: Cargo.toml
floresta-chain/src/: lib.rs
floresta-chain/src/pruned_utreexo/: chain_state.rs  chainparams.rs  chainstore.rs  error.rs  mod.rs  udata.rs
floresta-cli/: README.md
floresta-watch-only/: Cargo.toml
floresta-wire/: Cargo.toml
florestad/: Cargo.toml  build.rs
florestad/docs/: tutorial(PT-BR).md
florestad/src/: cli.rs  config_file.rs  error.rs  florestad.rs  lib.rs  main.rs  slip132.rs  wallet_input.rs  zmq.rs
florestad/src/json_rpc/: blockchain.rs  control.rs  mod.rs  network.rs  request.rs  res.rs  server.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: addrman.rs  best_chain_decode.rs  best_chain_roundtrip.rs  block_parsing_differential.rs  disk_block_header_decode.rs  disk_block_header_roundtrip.rs  flat_chainstore_header_insertion.rs  flat_chainstore_memory_access.rs  flat_chainstore_reorg.rs  local_address_str.rs  utreexo_block_des.rs  utreexo_proof_des.rs
fuzz/fuzz_targets/helpers/: logging.rs  mod.rs  rpc_helper.rs
fuzz/scripts/: generate_corpus_block_parsing_differential.sh  run_diff_fuzzer.sh
mdbook/: book.toml
metrics/: Cargo.toml
metrics/grafana/: dashboards.yml
metrics/grafana/dashboards/: floresta-dashboard.json
metrics/prometheus/: prometheus.yml
metrics/src/: lib.rs
src/: cli.rs  config_file.rs  error.rs  main.rs  version.rs  wallet_input.rs
test-rust/: Cargo.toml
test-rust/scripts/: bitcoind.sh  prepare.sh  utreexod.sh
test-rust/src/: main.rs
test-rust/tests/: floresta-rpc.rs
test-rust/tests/common/: bitcoind.rs  florestad.rs  mod.rs  utreexod.rs
tests/: README.md  conftest.py  electrum_handshake.py  example_test.py  floresta_cli_addnode.py  floresta_cli_getblock.py  floresta_cli_getmemoryinfo.py  floresta_cli_getroots.py  floresta_cli_getrpcinfo.py  node_manager.py  prepare.sh  requirements.txt  restart.py  run.sh  run_tests.py  test_runner.py  utilities.py
(+211 files in other folders)
