[workspace]
resolver = "2"
members = [
    # Libraries
    "crates/floresta",
    "crates/floresta-node",
    "crates/floresta-chain",
    "crates/floresta-rpc",
    "crates/floresta-common",
    "crates/floresta-compact-filters",
    "crates/floresta-electrum",
    "crates/floresta-watch-only",
    "crates/floresta-wire",

    # Binaries
    "bin/florestad",
    "bin/floresta-cli",

    # Tests and monitoring
    "metrics",
    "fuzz",
]

default-members = [
    "crates/floresta",
    "crates/floresta-node",
    "crates/floresta-chain",
    "crates/floresta-rpc",
    "crates/floresta-common",
    "crates/floresta-compact-filters",
    "crates/floresta-electrum",
    "crates/floresta-watch-only",
    "crates/floresta-wire",
    "bin/florestad",
    "bin/floresta-cli",
]

[workspace.package]
rust-version = "1.81.0" # MSRV declaration
readme = "README.md"

[workspace.lints.clippy]
unused_async = "deny"
