[project]
name = "floresta-functional-tests"
version = "0.0.3"
description = "Collection of tools to help with the functional tests of Floresta"
authors = [{ name = "The Floresta Project Developers" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "jsonrpclib>=0.2.1",
  "requests>=2.32.3",
  "black>=24.10.0",
  "pylint>=3.3.2",
  "cryptography>=44.0.2",
  "pyOpenSSL>=25.0.0",
  "pytest>=9.0.0",
  "pytest-xdist>=3.8.0",
  "pytest-timeout>=2.4.0",
  "pytest-html>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest-mock>=3.15.0",
  "pytest-benchmark>=5.2.0",
  "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tests/test_framework"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--strict-markers",
    "--strict-config", 
    "--tb=short",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "tls: marks tests that use TLS functionality",
    "multi_node: marks tests that use multiple nodes",
    "rpc: marks tests focused on RPC calls",
    "electrum: marks tests for electrum server functionality",
    "bitcoind: marks tests specific to bitcoind",
    "florestad: marks tests specific to florestad",
    "utreexod: marks tests specific to utreexod",
    "benchmark: marks performance benchmark tests",
    "unit: marks fast unit tests",
]

timeout = 300
timeout_method = "thread"

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

minversion = "9.0"