[project]
name = "floresta-functional-tests"
version = "0.0.3"
description = "Collection of tools to help with the functional tests of Floresta"
authors = [{ name = "The Floresta Project Developers" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "jsonrpclib>=0.2.1",
  "requests>=2.32.3",
  "black>=24.10.0",
  "pylint>=3.3.2",
  "cryptography>=44.0.2",
  "pyOpenSSL>=25.0.0",
  "pytest>=9.0.0",
  "pytest-xdist>=3.8.0",
  "pytest-timeout>=2.4.0",
  "pytest-html>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest-mock>=3.15.0",
  "pytest-benchmark>=5.2.0",
  "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tests/test_framework"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = ["*/*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "-n 4",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]

markers = [
    "example: marks tests that demonstrate how to use the Floresta test framework",
    "florestad: marks tests specific to the Florestad daemon",
    "rpc: marks tests focused on RPC calls",
]

timeout = 300
timeout_method = "thread"


minversion = "9.0"

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestCollectionWarning"
]