[package]
name = "florestad"
version = "0.7.0"
edition = "2021"

[dependencies]
rustreexo = "0.3.0"
clap = { version = "4.0.29", features = ["derive"] }
sha2 = "^0.10.6"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kv = "0.24.0"
miniscript = "12"
futures = "0.3.4"
toml = "0.5.10"
dirs = "4.0.0"
rand = "0.8.5"
bitcoin = { version = "0.32", features = ["serde", "std", "bitcoinconsensus"] }
ctrlc = "3.2.5"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.19"
floresta-chain = { path = "../crates/floresta-chain" }
floresta-common = { path = "../crates/floresta-common" }
floresta-electrum = { path = "../crates/floresta-electrum" }
floresta-watch-only = { path = "../crates/floresta-watch-only" }
floresta-wire = { path = "../crates/floresta-wire" }
floresta-compact-filters = { path = "../crates/floresta-compact-filters", optional = true }
metrics = { path = "../metrics", optional = true }
axum = { version = "0.7", optional = true }
anyhow = "1.0.40"
zmq = { version = "0.10.0", optional = true }
dns-lookup = "2.0.4"
tower-http = { version = "0.6.2", optional = true, features = ["cors"] }

[target.'cfg(unix)'.dependencies]
daemonize = { version = "0.5.0" }

[lib]
name = "florestad"
path = "src/lib.rs"

[[bin]]
name = "florestad"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1"

[features]
compact-filters = ["dep:floresta-compact-filters"]
zmq-server = ["dep:zmq"]
experimental-p2p = []
json-rpc = [
    "dep:axum",
    "dep:tower-http",
    "compact-filters"
]
default = ["experimental-p2p", "json-rpc"]
metrics = ["dep:metrics"]

[build-dependencies]
toml = "0.5.10"
