[package]
name = "floresta-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4", features = ["derive"] }
bitcoin = { workspace = true }
libfuzzer-sys = "0.4"
tempfile = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true, features = ["flat-chainstore"] }
floresta-wire = { workspace = true }

[[bin]]
name = "local_address_str"
path = "fuzz_targets/local_address_str.rs"
test = false
doc = false
bench = false

[[bin]]
name = "utreexo_proof_des"
path = "fuzz_targets/utreexo_proof_des.rs"
test = false
doc = false
bench = false

[[bin]]
name = "addrman"
path = "fuzz_targets/addrman.rs"
test = false
doc = false
bench = false

[[bin]]
name = "best_chain_decode"
path = "fuzz_targets/best_chain_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flat_chainstore_header_insertion"
path = "fuzz_targets/flat_chainstore_header_insertion.rs"
test = false
doc = false
bench = false

[[bin]]
name = "best_chain_roundtrip"
path = "fuzz_targets/best_chain_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "disk_block_header_decode"
path = "fuzz_targets/disk_block_header_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "disk_block_header_roundtrip"
path = "fuzz_targets/disk_block_header_roundtrip.rs"
test = false
doc = false
bench = false

[lints]
workspace = true
