[package]
name = "floresta-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4.2", features = ["derive"] }
bitcoin = { version = "0.32", features = ["serde", "std"] }
floresta-wire = { path = "../crates/floresta-wire" }
floresta-chain = { path = "../crates/floresta-chain" }
serde_json = "1.0.145"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = "0.4"
hex = "0.4.3"



[[bin]]
name = "local_address_str"
path = "fuzz_targets/local_address_str.rs"
test = false
doc = false
bench = false

[[bin]]
name = "utreexo_proof_des"
path = "fuzz_targets/utreexo_proof_des.rs"
test = false
doc = false
bench = false

[[bin]]
name = "addrman"
path = "fuzz_targets/addrman.rs"
test = false
doc = false
bench = false

[[bin]]
name = "best_chain_decode"
path = "fuzz_targets/best_chain_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flat_chainstore_header_insertion"
path = "fuzz_targets/flat_chainstore_header_insertion.rs"
test = false
doc = false
bench = false

[[bin]]
name = "best_chain_roundtrip"
path = "fuzz_targets/best_chain_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "disk_block_header_decode"
path = "fuzz_targets/disk_block_header_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "disk_block_header_roundtrip"
path = "fuzz_targets/disk_block_header_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "block_parsing_differential"
path = "fuzz_targets/block_parsing_differential.rs"
test = false
doc = false
bench = false