[package]
name = "metrics"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.33"
axum = "0.7"
prometheus-client = "0.22.3"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
