[package]
name = "test-functional"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = """
 Functional tests for Floresta, the tests use the Utreexod and Bitcoind in the tests.
"""
repository = "https://github.com/vinteumorg/Floresta"
readme.workspace = true # Floresta/README.md

keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[dependencies]


[dev-dependencies]
floresta-rpc = { path = "../crates/floresta-rpc", features = ["clap"] }
rand = "0.8.5"
rcgen = "0.13"
once_cell = "1.19"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1.0"
bitcoin = "0.32.7"
electrsd = { version = "0.36.0", default-features = false, features = ["legacy", "esplora_a33e97e1", "corepc-node_29_0"] }

[features]
functional-tests = []