[package]
name = "floresta-cli"
version = "0.2.0"
edition = "2021"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
license = "MIT"
description = """
    A command line interface for Florestad. You can use this client to interact
    with a running Florestad node.
"""
repository = "https://github.com/Davidson-Souza/Floresta"
readme = "README.md"
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["bitcoin", "blockchain", "node"]


[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
bitcoin = { version = "0.31", features = ["serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11.23", optional = true, features = ["blocking"] }

[features]
default = ["with-reqwest"]
with-reqwest = ["reqwest"]

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.9.0"

[lib]
name = "floresta_cli"
path = "src/lib.rs"
