[package]
name = "floresta-cli"
version = "0.4.1"
edition = "2021"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
license = "MIT"
description = """
    A command line interface for Florestad. You can use this client to interact
    with a running Florestad node.
"""
repository = "https://github.com/vinteumorg/Floresta"
readme = "README.md"
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]


[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
bitcoin = { version = "0.32", features = ["serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
jsonrpc = { version = "0.18.0", optional = true, features = ["minreq_http"] }

[features]
default = ["with-jsonrpc"]
with-jsonrpc = ["dep:jsonrpc"]

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.9.0"
rcgen = "0.13"

[lib]
name = "floresta_cli"
path = "src/lib.rs"

[[bin]]
name = "floresta-cli"
path = "src/main.rs"
required-features = ["with-jsonrpc"]
