[package]
name = "floresta-common"
version = "0.4.0"
edition = "2021"
description = "Common types and functions for Floresta"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
license = "MIT"
repository = "https://github.com/vinteumorg/Floresta"
readme.workspace = true # Floresta/README.md

[dependencies]
# Common dependencies
sha2 = { version = "0.10.6", default-features = false }
bitcoin = { version = "0.32", default-features = false, features = ["serde"] }
spin = "0.9.8"

# No-std specific dependencies
hashbrown = { version = "0.15.2" }

# Optional as descriptors feature
miniscript = { version = "12", default-features = false, optional = true }
serde = { version = "1.0.219", optional = true }
log = "0.4.27"
serde_json = { version = "1.0.140", optional = true }

[features]
default = ["std", "descriptors-std", ]
std = ["bitcoin/std", "sha2/std"]
# Both features can be set at the same time, but for `no_std` only the latter should be used
slip132 = ["serde", "serde_json"]
descriptors-std = ["miniscript/std", "serde", "serde_json", "slip132"]
descriptors-no-std = ["miniscript/no-std", "serde", "serde_json", "slip132"]
