[package]
name = "floresta-common"
version = "0.4.0"
edition = "2021"
description = "Common types and functions for Floresta"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
license = "MIT"
repository = "https://github.com/vinteumorg/Floresta"
readme.workspace = true # Floresta/README.md

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
hashbrown = { version = "0.16" }
miniscript = { workspace = true, optional = true }
sha2 = { workspace = true }
spin = { workspace = true }

[features]
default = ["std", "descriptors-std"]
std = ["bitcoin/std", "sha2/std"]
# Both features can be set at the same time, but for `no_std` only the latter should be used
descriptors-std = ["miniscript/std"]
descriptors-no-std = ["miniscript/no-std"]

[lints]
workspace = true
