[package]
name = "floresta-compact-filters"
version = "0.4.0"
authors = ["Davidson Sousa <davidson.lucas.souza@outlook.com>"]
edition = "2018"
homepage = "https://github.com/davidson-souza/floresta"
repository = "https://github.com/davidson-souza/floresta"
description = """
BIP158 compact filters for easy rescan of the blockchain in light clients.
"""
readme.workspace = true # Floresta/README.md

[dependencies]
bitcoin = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true }

[lints]
workspace = true
