[package]
name = "floresta-compact-filters"
version = "0.4.1"
authors = ["Davidson Sousa <davidson.lucas.souza@outlook.com>"]
edition = "2018"
homepage = "https://github.com/davidson-souza/floresta"
repository = "https://github.com/davidson-souza/floresta"
description = """
                BIP158 compact filters for easy rescan of the blockchain in
                light clients.
            """

[dependencies]
bitcoin = "0.32"
floresta-chain = { path = "../floresta-chain", default-features = false }
kv = "0.24.0"

