[package]
name = "floresta-electrum"
version = "0.4.0"
edition = "2021"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
description = """
    A simple Electrum server implementation for Floresta. It is based on the
    Electrum protocol specification and works out of the box with any wallet
    that supports Electrum servers.
"""
repository = "https://github.com/vinteumorg/Floresta"
license = "MIT"
readme.workspace = true # Floresta/README.md
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
bitcoin = { workspace = true, features = ["serde", "std", "bitcoinconsensus"] }
rustreexo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true }
floresta-compact-filters = { workspace = true }
floresta-common = { workspace = true }
floresta-watch-only = { workspace = true }
floresta-wire = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rcgen = { workspace = true }
zstd = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true, features = ["flat-chainstore"] }

[lints]
workspace = true
