[package]
name = "floresta-electrum"
version = "0.4.1"
edition = "2021"
authors = ["Davidson Souza <davidson.lucas.souza@outlook.com>"]
description = """
    A simple Electrum server implementation for Floresta. It is based on the
    Electrum protocol specification and works out of the box with any wallet
    that supports Electrum servers.
"""
repository = "https://github.com/vinteumorg/Floresta"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
floresta-common = { path = "../floresta-common" }
floresta-chain = { path = "../floresta-chain" }
floresta-watch-only = { path = "../floresta-watch-only" }
floresta-compact-filters = { path = "../floresta-compact-filters" }
floresta-wire = { path = "../floresta-wire" }

rustreexo = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = { version = "0.32", features = ["serde", "std", "bitcoinconsensus"] }
thiserror = "1.0"

[dev-dependencies]
rand = "0.8.5"
rcgen = "0.13"
zstd = "0.13.3"
floresta-chain = { path = "../floresta-chain", features = ["flat-chainstore"] }
